--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+indexmap = "1.9.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.96"
 uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
