--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 indexmap = "1.9.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.96"
+sqlite = "0.30.4"
 uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
