--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 indexmap = "1.9.3"
+regex = "1.8.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.96"
 uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
