--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.6.17"
+clap = { version = "4.2.4", features = ["derive"] }
 indexmap = "1.9.3"
-regex = "1.8.1"
+regex = "1"
 serde = { version = "1", features = ["derive"] }
-serde_json = "1.0.96"
+serde_json = "1"
+tokio = { version = "1.28.0", features = ["full"] }
 uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
