--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 axum = { version = "0.6.17", features = ["headers", "http2"] }
 clap = { version = "4.2.4", features = ["derive"] }
 indexmap = "1.9.3"
+once_cell = "1.17.1"
 regex = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
