--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.6.18", features = ["headers", "http2"] }
-clap = { version = "4.3.8", features = ["derive"] }
-indexmap = "2.0.0"
-once_cell = "1.18.0"
-regex = "1"
+axum = "0.7"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "1.28.2", features = ["full"] }
-uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }
+tokio = { version = "1", features = ["full"] }
+clap = { version = "4.5", features = ["derive"] }
+axum-extra = { version = "0.9", features = ["typed-header"] }
+headers = "0.4"
+indexmap = "2.2.6"
