--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rabbit-kv"
 version = "0.1.0"
 edition = "2021"
+readme = "README.md"
 repository = "https://github.com/Rabbit-Company/rabbit-kv"
 description = "Simple key-value store written in Rust with HTTP and WebSockets support"
 
