--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "rabbit-kv"
 version = "0.1.0"
 edition = "2021"
 readme = "README.md"
+license-file = "LICENSE"
 repository = "https://github.com/Rabbit-Company/rabbit-kv"
 description = "Simple key-value store written in Rust with HTTP and WebSockets support"
 
