--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,9 @@ insert_final_newline = false
 trim_trailing_whitespace = true
 end_of_line = lf
 
+[*.yml]
+indent_style = space
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = false
